--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.6.0",
     "joblib>=1.5.0",
+    "requests>=2.32.3",
     "scikit-learn==1.6.1",
     "torch>=2.7.0",
     "transformers>=4.51.3",
