--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,15 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
-    "accelerate>=1.6.0",
-    "joblib>=1.5.0",
+    "flask>=3.1.1",
+    "numpy>=2.2.5",
+    "pvporcupine>=3.0.5",
+    "pyttsx3>=2.98",
     "requests>=2.32.3",
-    "scikit-learn==1.6.1",
+    "scipy>=1.15.3",
+    "silero-vad>=5.1.2",
+    "sounddevice>=0.5.2",
     "torch>=2.7.0",
-    "transformers>=4.51.3",
-    "voluptuous>=0.15.2",
+    "torchaudio>=2.7.0",
+    "whisper>=1.1.10",
 ]
