--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.1",
+    "mcp[cli]>=1.9.2",
     "numpy>=2.2.5",
     "pvporcupine>=3.0.5",
     "pyttsx3>=2.98",
