--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,22 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
+    "fastmcp>=2.5.2",
     "flask>=3.1.1",
+    "langchain>=0.3.25",
+    "langchain-mcp-adapters>=0.1.4",
+    "langchain-ollama>=0.3.3",
+    "langgraph>=0.4.7",
     "mcp[cli]>=1.9.2",
     "numpy>=2.2.5",
     "pvporcupine>=3.0.5",
+    "pyaudio>=0.2.14",
     "pyttsx3>=2.98",
     "requests>=2.32.3",
     "scipy>=1.15.3",
     "silero-vad>=5.1.2",
     "sounddevice>=0.5.2",
+    "speechrecognition>=3.14.3",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
     "whisper>=1.1.10",
