--- a/mcp/pyproject.toml
+++ b/mcp/pyproject.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
+    "faster-whisper>=1.1.1",
     "fastmcp>=2.5.2",
     "flask>=3.1.1",
     "langchain>=0.3.25",
@@ -20,6 +21,7 @@ dependencies = [
     "scipy>=1.15.3",
     "silero-vad>=5.1.2",
     "sounddevice>=0.5.2",
+    "soundfile>=0.13.1",
     "speechrecognition>=3.14.3",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
